--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Legatus.MainWindow"
+﻿<Window x:Class="LegatusApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Legatus"
+        xmlns:local="clr-namespace:LegatusApplication"
         mc:Ignorable="d"
-        Title="Arcalam" ResizeMode="CanResize"
+        Title="Legatus" ResizeMode="CanResize"
         WindowStartupLocation="CenterScreen" Width="900" Height="500" SnapsToDevicePixels="True" Closing="Window_Closing">
     <Grid Name="MainContainer" Background="SkyBlue">
         <TextBlock x:Name="Today" FontSize="16" HorizontalAlignment="Stretch" VerticalAlignment="Top" TextAlignment="Center" Text="Wednesday December 5th, 2020"/>
